--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -14,21 +15,20 @@
     <header>
         <h1 div class="header-title">BirdSite </h1>
         <nav class="header-right">
-            <ul>
-                <li a href="#"> Home</li>
-                <li a href="#"></a> Menu</li>
-                <li a href="#"></a> Contact</li>
+            <ul class="inner">
+                <li><a href="#"> Home</a></li>
+                <li><a href="#"> Menu</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- kv部分 -->
-    <div class="kv">
+    <section class="kv">
         <div class="title-wrap">
             <h2 class="main-title">Birds</h2>
             <p class="subtitle">鳥の世界へようこそ</p>
         </div>
-    </div>
+    </section>
 
     <div class="grid">
 
@@ -36,52 +36,55 @@
             <img src="./img/koajisasi_img.jpg" alt="コアジサシ">
             <a href="#">コアジサシ</a>
         </div>
+
+
+        <div class="item">
+            <img src="./img/munaguro_img.jpg" alt="ムナグロ">
+            <a href="#">ムナグロ</a>
+        </div>
+
+
+
+        <div class="item">
+            <img src="./img/kawasemi_img.jpg" alt="カワセミ">
+            <a href="#">カワセミ</a>
+        </div>
+
+        <div class="item">
+            <img src="./img/kawau_img.JPG" alt="カワウ">
+            <a href="#">カワウ</a>
+        </div>
+
+
+        <div class="item">
+            <img src="./img/kurotura_img.jpg" alt="クロツラヘラサギ">
+            <a href="#">クロツラヘラサギ</a>
+        </div>
+
+        <div class="item">
+            <img src="./img/hamashigi_img.jpg" alt="ハマシギ">
+            <a href="#">ハマシギ</a>
+        </div>
+
+        <div class="item">
+            <img src="./img/medai_img.jpg" alt="メダイチドリ">
+            <a href="#">メダイチドリ</a>
+        </div>
+
+        <div class="item">
+            <img src="./img/misago_img.jpg" alt="ミサゴ">
+            <a href="#">ミサゴ</a>
+        </div>
+
+        <div class="item">
+            <img src="./img/shimaenaga_img.jpg" alt="シマエナガ">
+            <a href="#">シマエナガ</a>
+        </div>
+    </div>
+        <footer>
+            <span>All rights reserved 2022 <small>&copy;</small>Nanami</span>
+        </footer>
     
-
-        <div class="item">
-        <img src="./img/munaguro_img.jpg" alt="ムナグロ">
-        <a href="#">ムナグロ</a>
-    </div>
-
-
-
-        <div class="item">
-        <img src="./img/kawasemi_img.jpg" alt="カワセミ">
-        <a href="#">カワセミ</a>
-    </div>
-
-        <div class="item">
-        <img src="./img/kawau_img.JPG" alt="カワウ">
-        <a href="#">カワウ</a>
-    </div>
-
-
-        <div class="item">
-        <img src="./img/kurotura_img.jpg" alt="クロツラヘラサギ">
-        <a href="#">クロツラヘラサギ</a>
-    </div>
-
-    <div class="item">
-        <img src="./img/hamashigi_img.jpg" alt="ハマシギ">
-        <a href="#">ハマシギ</a>
-    </div>
-
-        <div class="item">
-        <img src="./img/medai_img.jpg" alt="メダイチドリ">
-        <a href="#">メダイチドリ</a>
-    </div>
-
-        <div class="item">
-        <img src="./img/misago_img.jpg" alt="ミサゴ">
-        <a href="#">ミサゴ</a>
-    </div>
-
-        <div class="item">
-        <img src="./img/shimaenaga_img.jpg" alt="シマエナガ">
-        <a href="#">シマエナガ</a>
-    </div>
-
-    </div>
 </body>
 
 </html>
